--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,9 @@ name: CloudHolder
 version: '${version}'
 main: me.milka.gilles.cloudholder.cloudholder.CloudHolder
 api-version: '1.19'
+depend:
+  - PlaceholderAPI
+
+commands:
+  cloudholder:
+    description: Hoi
