--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,15 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = "placeholderapi"
+        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+    }
 }
 
 dependencies {
-compileOnly "io.papermc.paper:paper-api:1.19.1-R0.1-SNAPSHOT"
+    implementation 'me.clip:placeholderapi:2.11.3'
+    compileOnly "io.papermc.paper:paper-api:1.19.1-R0.1-SNAPSHOT"
 }
 
 def targetJavaVersion = 17
